...
    
  return (
      <SafeAreaView className="flex-1 bg-[#070f1b]">
        <ScrollView showsVerticalScrollIndicator={false} className="space-y-6 mt-10">

            <View className="mx-7 flex-row justify-between items-center mb-10">
                <Text className="font-dsbold text-neutral-200 text-3xl">Bookmarks</Text>

                <TouchableOpacity>
                    <Image source={images.BookmarkImg} style={{width: 120, height: 120, borderRadius: 9999}} resizeMode='cover' />
                </TouchableOpacity>
            </View>

...
